# Code_Works

./: README.md
ADS - seminary/LabWork5/: CMakeLists.txt  asg_1.cpp  asg_2.cpp  asg_3.cpp
ADS - seminary/LabWork_2/: ComputePrefixFunction_Ex.1.txt  Ex1.txt
ADS - seminary/LabWork_4/: findBestApproximation.c
ADS - seminary/LabWork_6/: CMakeLists.txt  Poly.cpp
ADS - seminary/Labwork1/: LabWork1.cpp
ADS - seminary/Labwork2/: BinomialHeap.cpp  CMakeLists.txt  main.cpp
Conti/: tema.txt
Conti/matheus/: CMakeLists.txt
Conti/matheus/cmake/: gtest_common.cmake
Conti/matheus/src/include/multiply/: multiply.h
Conti/matheus/src/multiply/: multiply.c
Conti/matheus/tests/: multiply_test.cpp
Conti/matheus/tests/mock/: mock.h
DB/: DB_QUIZZ  Lab_3_commands.txt  Lab_4_commands.txt  Lab_5_mandatory_exercises.txt  Lab_6_.txt
Don'tMind/: CMakeLists.txt  main.cpp  out.txt  problem.cpp
Licenta/: AI-BasedSeamlessVehicleLicensePlateRecognitionUsingRaspberryPiTechnologyPaper.doc  HUGE Use Case Diagram.vpp  HUGE Use Case Diagram.vpp.bak_000f  HUGE Use Case Diagram.vpp.bak_001d  Rest of the papers.txt  Watering24h.py  citations.txt  research.docx  use case diagram.vpp  use case diagram.vpp.bak_000f  use case diagram.vpp.bak_001d  use case diagram.vpp.bak_002d  use case diagram.vpp.bak_003d
OS/: LabEx.txt  Os_sizes.c  Questions.txt  app  redirect.c  sizes.c
OS/Lab11/: Lab11.c  (+5 more)
Y2S1/: ToDo.txt
Y2S1/OS/Lab11/: CMakeLists.txt  Lab11-ABCDE.c  app2  numbers.txt  readme  thread1.c
Y2S1/OS/Lab11/OS_Thursday_Pungila/: app  no_digits_multithread.c
test/: untitled.flp
(+918 files in other folders)
